--- a/.github/workflows/daily_batch1.yml
+++ b/.github/workflows/daily_batch1.yml
@@ -2,8 +2,8 @@ name: Daily Horoscope - Batch 1 (Aries, Taurus, Gemini)
 on:
   workflow_dispatch:
   schedule:
-    # 1:30 AM EST = 6:30 AM UTC
-    - cron: "30 6 * * *"
+    # 4:00 AM EST = 9:00 AM UTC (Videos will publish at 6 AM EST)
+    - cron: "0 9 * * *"
 
 jobs:
   produce-video:
@@ -39,8 +39,6 @@ jobs:
       - name: Run Production Studio
         env:
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-          OPENROUTER_API_KEY_BACKUP: ${{ secrets.OPENROUTER_API_KEY_BACKUP }}
-          OPENROUTER_API_KEY_BACKUP_2: ${{ secrets.OPENROUTER_API_KEY_BACKUP_2 }}
           GOOGLE_AI_API_KEY: ${{ secrets.GOOGLE_AI_API_KEY }}
           YOUTUBE_CLIENT_ID: ${{ secrets.YOUTUBE_CLIENT_ID }}
           YOUTUBE_CLIENT_SECRET: ${{ secrets.YOUTUBE_CLIENT_SECRET }}
