--- a/.github/workflows/daily_batch2.yml
+++ b/.github/workflows/daily_batch2.yml
@@ -1,4 +1,4 @@
-name: Daily Horoscope - Batch 2 (Cancer, Leo, Virgo)
+ame: Daily Horoscope - Batch 2 (Cancer, Leo, Virgo)
 on:
   workflow_dispatch:
   schedule:
