--- a/.github/workflows/daily_batch3.yml
+++ b/.github/workflows/daily_batch3.yml
@@ -1,4 +1,4 @@
-name: Daily Horoscope - Batch 3 (Libra, Scorpio, Sagittarius)
+ame: Daily Horoscope - Batch 3 (Libra, Scorpio, Sagittarius)
 on:
   workflow_dispatch:
   schedule:
